--- a/mysql.yaml
+++ b/mysql.yaml
@@ -3,6 +3,7 @@
   hosts:
   become: yes
   vars:
+    mysql_root_password:  ExpenseApp@1
   tasks:
     - name: install mysql server
       ansble.builtin.dnf:
@@ -20,7 +21,9 @@
     - name: connect mysql server
       community.mysql.mysql_info: 
         login_user:  root
-        login_password: ExpenseApp@1
+        login_password: "{{ mysql_root_password }}"
+        logIn_host: ""
+      ignore_errors: true
       regsiter: mysql_information
 
     - name: print  mysql_information
