--- a/mysql.yaml
+++ b/mysql.yaml
@@ -1,31 +1,40 @@
----
-- name:  configure mysql
-  hosts:
+- name: configure mysql server
+  hosts: mysql
   become: yes
   vars:
-    mysql_root_password:  ExpenseApp@1
+    mysql_root_password: ExpenseApp@1
   tasks:
-    - name: install mysql server
-      ansble.builtin.dnf:
-        name: mysql
-        state: present
+  - name: Install MySQL libraries
+    ansible.builtin.pip:
+      name: "{{ item }}"
+      executable: pip3.9
+    loop:
+    - cryptography
+    - PyMySQL
 
+  - name: Install MySQL server
+    ansible.builtin.package:
+      name: mysql-server
+      state: installed
 
-    - name: start the mysql server inside service
-      ansible.builtin.service: 
-        name: mysqld
-        state: started
-        enabled: yes
+  - name: start and enable mysql server
+    ansible.builtin.service:
+      name: mysqld
+      state: started
+      enabled: yes
 
-    
-    - name: connect mysql server
-      community.mysql.mysql_info: 
-        login_user:  root
-        login_password: "{{ mysql_root_password }}"
-        logIn_host: ""
-      ignore_errors: true
-      regsiter: mysql_information
+  - name: connect to mysql server
+    community.mysql.mysql_info:
+      login_user: root
+      login_password: "{{ mysql_root_password }}"
+      login_host: 10.0.0.87
+    register: mysql_info
+    ignore_errors: true
 
-    - name: print  mysql_information
-      ansible.builtin.debug:
-        msg: "{{ mysql_info }}"
+  - name: print the output
+    ansible.builtin.debug:
+      msg: "MySQL info: {{ mysql_info }}"
+
+  - name: setup root password
+    ansible.builtin.command: " mysql_secure_installation --set-root-pass {{ mysql_root_password }} "
+    when: mysql_info.failed is true
