--- a/inventory.ini
+++ b/inventory.ini
@@ -5,7 +5,7 @@
 10.0.0.87
 
 [frontend]
-34.239.183.218
+34.239.183.218 ansible_user=root ansibel_ssh_private_key_file=/C/Users/chakr/Downaloads/OMANAMAHASHIAVAYA123.pem
 
 [all:vars]
 ansible_user=ec2-user
